--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
       with:
-        token: ${{secrets.KLTN_GITHUB_TOKEN}}
+        token: ${{secrets.KLTN_DEMO_TOKEN}}
 
     - name: Set up Python
       uses: actions/setup-python@v4
